fixing spacing and layout issues

--- a/src/pages/ResourcesPage/components/Workshops/game-jam-workshops.module.css
+++ b/src/pages/ResourcesPage/components/Workshops/game-jam-workshops.module.css
@@ -1,4 +1,4 @@
-.workshopContainer {
+.container {
     width: 45vw;
     height: fit-content;
     display: flex;
